tests/NormalTests/paczka1/small_fuzzy/78964243.err
Error in line 3: hZJ S552 51,8
Error in line 6: d3fOZm2 S552 34,48
